--- a/hooks/build
+++ b/hooks/build
@@ -5,4 +5,5 @@
 echo "Build hook running"
 docker build --build-arg BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"` \
              --build-arg VCS_REF=`git rev-parse --short HEAD` \
+             --build-arg BUILD_VERSION=$DOCKER_TAG \
              -t $IMAGE_NAME .
