- add back a simplified RelInfo Icon in `downloads`, `uploads`, `share` and `search` view - add `permalink` on top Bar - load http files with `file_get_contents` instead of `fsockopen` - refactor code and style of `/index.php` for better readability - removed `minigui`

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,11 +1,11 @@
-name: '[docker] CI for releases'
+name: 'docker'
 
 on:
     create:
         tags:
 
 jobs:
-    release:
+    build:
         runs-on: ubuntu-latest
         steps:
             -   name: Checkout
